RESOLVED FIXED302574
[blocks-in-inline] Fix simple margin collapsing before/after between blocks
https://bugs.webkit.org/show_bug.cgi?id=302574
Summary [blocks-in-inline] Fix simple margin collapsing before/after between blocks
alan
Reported 2025-11-15 10:54:37 PST
ssia
Attachments
Patch (11.17 KB, patch)
2025-11-15 10:59 PST, alan
no flags
Patch (11.17 KB, patch)
2025-11-15 14:13 PST, alan
no flags
Patch (14.33 KB, patch)
2025-11-15 18:15 PST, alan
no flags
[fast-cq]Patch (14.38 KB, patch)
2025-11-15 18:22 PST, alan
no flags
alan
Comment 1 2025-11-15 10:59:00 PST
Antti Koivisto
Comment 2 2025-11-15 11:03:40 PST
Comment on attachment 477406 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=477406&action=review > Source/WebCore/rendering/RenderBlockFlow.cpp:944 > +RenderBlockFlow::BlockPositionAndMargin RenderBlockFlow::layoutBlockChildFromIFC(RenderBox& child, LayoutUnit contentHeight, MarginInfo marginInfo) or layoutBlockChildFromInlineLayout?
alan
Comment 3 2025-11-15 14:13:08 PST
alan
Comment 4 2025-11-15 18:15:25 PST
alan
Comment 5 2025-11-15 18:22:46 PST
Created attachment 477410 [details] [fast-cq]Patch
EWS
Comment 6 2025-11-16 05:26:47 PST
Committed 303090@main (902b5a3b1992): <https://commits.webkit.org/303090@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477410 [details].
Radar WebKit Bug Importer
Comment 7 2025-11-16 05:27:13 PST
Note You need to log in before you can comment on or make changes to this bug.