[blocks-in-inline] Fix simple margin collapsing before/after between blocks https://bugs.webkit.org/show_bug.cgi?id=302574

Reviewed by Antti Koivisto.

1. Before running render tree layout covert MarginState -> MarginInfo
2. Call dedicated RenderBlockFlow::layoutBlockChildFromInlineLayout to layout block(s) in inline
3. After layout covert MarginInfo -> MarginState

Test: fast/inline/blocks-in-inline-layout-with-margins.html

* LayoutTests/fast/inline/blocks-in-inline-float-clear.html:
* LayoutTests/fast/inline/blocks-in-inline-layout-with-margins-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-layout-with-margins.html: Added.
* Source/WebCore/layout/formattingContexts/block/BlockLayoutState.h:
(WebCore::Layout::BlockLayoutState::MarginState::resetBeforeSideOfBlock):
(WebCore::Layout::BlockLayoutState::MarginState::margin const):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::updateLayoutStateWithLineLayoutResult):
* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp:
(WebCore::LayoutIntegration::layoutWithFormattingContextForBlockInInline):
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::MarginInfo::MarginInfo):
(WebCore::RenderBlockFlow::layoutBlockChildFromInlineLayout):
* Source/WebCore/rendering/RenderBlockFlow.h:

Canonical link: https://commits.webkit.org/303090@main