Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp
@@ -96,24 +96,27 @@ void layoutWithFormattingContextForBlockInInline(const Layout::ElementBox& block
     };
     populateRootRendererWithFloatsFromIFC();
 
-    // Render tree uses block height to track the child block layout position. Set it to the current position before calling layoutBlockChild.
-    rootBlockContainer.setLogicalHeight(blockLogicalTopLeft.y() - rootBlockContainer.marginBefore());
+    auto marginInfoForBlock = [&] {
+        auto& marginState = parentBlockLayoutState.marginState();
+        return RenderBlockFlow::MarginInfo { marginState.canCollapseWithChildren, marginState.canCollapseMarginBeforeWithChildren, marginState.canCollapseMarginAfterWithChildren, marginState.quirkContainer, marginState.atBeforeSideOfBlock, marginState.atAfterSideOfBlock, marginState.hasMarginBeforeQuirk, marginState.hasMarginAfterQuirk, marginState.determinedMarginBeforeQuirk, marginState.positiveMargin, marginState.negativeMargin };
+    };
 
-    auto marginInfo = RenderBlockFlow::MarginInfo { rootBlockContainer };
-    // FIXME: These are probably needed to make the container margin collapsing work.
-    marginInfo.setAtBeforeSideOfBlock(false);
-    marginInfo.setAtAfterSideOfBlock(false);
+    auto positionAndMargin = rootBlockContainer.layoutBlockChildFromInlineLayout(blockRenderer, blockLogicalTopLeft.y(), marginInfoForBlock());
 
-    LayoutUnit previousFloatLogicalBottom;
-    LayoutUnit maxFloatLogicalBottom;
-    rootBlockContainer.layoutBlockChild(blockRenderer, marginInfo, previousFloatLogicalBottom, maxFloatLogicalBottom);
+    auto updateMarginState = [&] {
+        auto& marginInfo = positionAndMargin.marginInfo;
+        parentBlockLayoutState.marginState() = { marginInfo.canCollapseWithChildren(), marginInfo.canCollapseMarginBeforeWithChildren(), marginInfo.canCollapseMarginAfterWithChildren(), marginInfo.quirkContainer(), marginInfo.atBeforeSideOfBlock(), marginInfo.atAfterSideOfBlock(), marginInfo.hasMarginBeforeQuirk(), marginInfo.hasMarginAfterQuirk(), marginInfo.determinedMarginBeforeQuirk(), marginInfo.positiveMargin(), marginInfo.negativeMargin() };
+    };
+    updateMarginState();
 
     auto updater = BoxGeometryUpdater { layoutState, rootLayoutBox(block) };
     updater.updateBoxGeometryAfterIntegrationLayout(block, rootBlockContainer.contentBoxLogicalWidth());
 
     ASSERT(!blockRenderer.needsLayout());
     auto& blockGeometry = layoutState.ensureGeometryForBox(block);
-    blockGeometry.setTopLeft(LayoutPoint { blockGeometry.marginStart(), blockGeometry.marginBefore() });
+    blockGeometry.setTopLeft(LayoutPoint { blockGeometry.marginStart(), positionAndMargin.logicalTop });
+    // FIXME: This is only valid under the assumption that the block is immediately followed by an inline (i.e. no margin collapsing).
+    blockGeometry.setVerticalMargin({ positionAndMargin.logicalTop, positionAndMargin.marginInfo.margin() });
 
     auto populateIFCWithNewlyPlacedFloats = [&] {
         auto* renderBlockFlow = dynamicDowncast<RenderBlockFlow>(blockRenderer);
